--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "duckdb>=1.4.3",
     "fastapi>=0.127.1",
+    "geopandas>=1.1.2",
     "mapbox-vector-tile>=2.2.0",
     "msgpack>=1.1.2",
     "pandas>=2.3.3",
