--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-    "builds": [
-        {
-            "src": "src/backend/main.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/backend/main.py"
-        }
-    ]
+    "buildCommand": null,
+    "outputDirectory": "src/frontend",
+    "framework": null
 }
